# serde-inner-serialize

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
serde-inner-serialize-core/: Cargo.toml  README.md
serde-inner-serialize-core/src/: lib.rs  tests.rs
serde-inner-serialize-derive/: Cargo.toml
serde-inner-serialize-derive/src/: lib.rs
serde_inner_serialize_core/: Cargo.toml  README.md
serde_inner_serialize_core/src/: lib.rs  tests.rs
serde_inner_serialize_derive/: Cargo.toml  README.md
serde_inner_serialize_derive/src/: lib.rs
src/: lib.rs
tests/: integration_tests.rs
