[package]
name = "serde_inner_serialize"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["serde_inner_serialize_core", "serde_inner_serialize_derive"]

[dev-dependencies]
trybuild = "1.0"
serde = { version = "1.0.216" }
serde_json = "1.0.134"

[dependencies]
serde_inner_serialize_derive = { path = "serde_inner_serialize_derive" }
serde_inner_serialize_core = { path = "serde_inner_serialize_core" }
