[package]
name = "serde_inner_serialize"
version = "0.1.0"
edition = "2021"
authors = ["Dave Lee"]
description = "A package of proc macros to assist in serializing nested structures flatly via serde"
repository = "https://github.com/dave-gray101/serde-inner-serialize"
license = "MIT"

[workspace]
members = ["serde_inner_serialize_core", "serde_inner_serialize_derive"]

[features]
default=[]
const_type_name = ["serde_inner_serialize_core/const_type_name"]

[dev-dependencies]
trybuild = "1.0"
serde = { version = "1.0.216" }
serde_json = "1.0.134"

[dependencies]
serde_inner_serialize_derive = { path = "serde_inner_serialize_derive" }
serde_inner_serialize_core = { path = "serde_inner_serialize_core", default-features = false }
