[package]
name = "serde_inner_serialize_core"
version = "0.1.0"
edition = "2021"
authors = ["Dave Lee"]
description = "A package of proc macros to assist in serializing nested structures flatly via serde"
repository = "https://github.com/dave-gray101/serde-inner-serialize"
license = "MIT"

[features]
const_type_name = []

[dev-dependencies]
colored-diff = "0.2.3"

[dependencies]
syn = { version = "2.0.91", features = ["extra-traits", "full", "fold"] }
quote = "1.0.37"
proc-macro2 = "1.0.92"
proc-macro-error = "1.0"
serde = { version = "1.0.216" }
