[package]
name = "serde_inner_serialize_derive"
version = "0.1.1"
edition = "2021"
authors = ["Dave Lee"]
description = "A package of proc macros to assist in serializing nested structures flatly via serde"
repository = "https://github.com/dave-gray101/serde-inner-serialize"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
serde_inner_serialize_core = "0.1"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
